<?xml version="1.0"?>
<package>
    <name>ros_course</name>
    <version>0.0.0</version>
    <description>The ros_course package</description>
    <maintainer email="antonovspostbox@gmail.com">Antonov Evgeniy</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <run_depend>rospy</run_depend>
    <build_depend>angles</build_depend>
    <run_depend>angles</run_depend>
    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>
    <build_depend>geometry_msgs</build_depend>
    <run_depend>geometry_msgs</run_depend>
    <build_depend>sensor_msgs</build_depend>
    <run_depend>sensor_msgs</run_depend>
    <build_depend>turtlesim</build_depend>
    <run_depend>turtlesim</run_depend>

    <export>
    </export>
</package>
